[project]
name = "quant-ls-1d"
version = "0.1.0"
description = "Long/short, dollar-neutral US equity ML strategy with leakage-safe pipeline and cost-aware backtesting."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "yfinance>=0.2.40",
  "pyarrow>=15.0",
  "scikit-learn>=1.4",
  "lightgbm>=4.3",
  "matplotlib>=3.8",
  "tqdm>=4.66",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
